<resources>
    <string name="app_name">muhasebe_app</string>
    <string name="default_web_client">523779561235-umcj8qhihns5s76enb43oa8orleul8s4.apps.googleusercontent.com</string>
    <string name="randomPhone">+905543696796</string>
    <string name="kimlik_dogrulanmadi">Kimliğiniz Doğrulanamadı</string>
    <string name="warning_pin_code">Pin Kodu 4 Haneli Olmalı !</string>
    <string name="yaklasanOdeme">Yaklaşan Ödemeler</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="tamam_caps">TAMAM</string>
    <string name="iptal_et_caps">İPTAL ET</string>
    <string name="hos_geldin">Hoş Geldin!</string>
    <string name="kullanici_adiniz">Kullanıcı Adınız</string>
    <string name="sifreniz">Şifreniz</string>
    <string name="sifre_tekrar">Şifrenizi Tekrar Girin</string>
    <string name="giris">GİRİŞ YAP</string>
    <string name="gmail">Gmail İle Giriş</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="tarih">Ödeme Tarihi</string>
    <string name="evet">Evet</string>
    <string name="goster">Göster</string>
    <string name="veri_yok">Henüz İşlem Girmediniz</string>
    <string name="pdf">Pdf</string>
    <string name="question_delete">Silmek istiyor musunuz?</string>
    <string name="sil_caps">SİL</string>
    <string name="kaydet_caps">KAYDET</string>
    <string name="bilgiler_guncellendi">Bilgileriniz Güncellendi</string>
    <string name="sifre_gonderildi">Şifre Bağlantısı Geldi</string>
    <string name="mailDogrulama">Mail Doğrulaması Gönderildi</string>
    <string name="cikmak_istiyormusunuz">Çıkmak İstiyor Musunuz ?</string>
    <string name="not_found">Kayıt Bulunamadı !</string>
    <string name="hayir">Hayır</string>
    <string name="ad_soyad">Ad-Soyad</string>
    <string name="settings">Ayarlar</string>
    <string name="tekrar_gir">Şifre Tekrar Giriniz</string>
    <string name="koyu_tema">Koyu Tema</string>
    <string name="ayarlari_ac">Ayarları Aç</string>
    <string name="logout">Çıkış Yap</string>
    <string name="kaydet">Kaydet</string>
    <string name="animasyonlar">Animasyonlar</string>
    <string name="harcamalar">Harcamalarım</string>
    <string name="bildirim">Bildirimler</string>
    <string name="islemlerim">İşlemlerim</string>
    <string name="odemetarih">Ödeme Tarihi Seçiniz</string>
    <string name="faturaTip">Fatura Tipi</string>
    <string name="bakiye">Bakiye</string>
    <string name="ekle">Ekle</string>
    <string name="bakiyeGir">Bakiye Giriniz</string>
    <string name="lutfen_izinleri_veriniz">Lütfen ayarlar dan tüm izinleri veriniz !</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="fotograf_eklendi">Fotograf Kaydedildi</string>
    <string name="ödeme_kaydedildi">Ödeme Kayıt Edildi</string>
    <string name="hata">Hata Oluştu !!</string>
    <string name="sifreler_aynidegil">Şifreler Birbiriyle Uyuşmuyor</string>
    <string name="odeme_ekle">Ödeme Ekle</string>
    <string name="odeme_tipi">Ödepe Tipi</string>
    <string name="odeme_butcesi_gir">Ödeme Bütçesi Giriniz</string>
    <string name="butce">Bütçe Giriniz</string>
    <string name="butcem">Bütçe</string>
    <string name="grafikler">Grafik</string>
    <string name="olustur">Oluştur</string>
    <string name="pdf_olustur">Pdflerim</string>
    <string name="pdf_olusturmak_istermisiniz">Pdf oluşturmak istiyor musunuz?</string>
    <string name="harcama_bulunamadı">Harcama Bulunamadı</string>
    <string name="arkadaslarim">Arkadaşlarım</string>
    <string name="arkadas">Arkadas</string>
    <string name="arkadas_ekle">Arkadaş Ekle</string>
    <string name="arkdas_eklendi">Arkdaş Grubu Oluşturuldu</string>
    <string name="arkadas_bos">Hiç Arkadaş Eklemediniz</string>
    <string name="arkadas_ekleyin">Kaydetmek için arakdaş grubu eklemelisiniz.</string>
    <string name="bildirimTarihi">Bildirim Tarihi Giriniz</string>
    <string name="son_odeme_tarihi">Bildirim Tarihi</string>
    <string name="odeme_tarihi_buyuk_olmali">Ödeme Tarihi Bildirim Tarihten Büyük Olmalı</string>
    <string name="arkadaslari_listele">Grup arkdaşlarını görüntülemek için listeye dokun </string>
    <string name="arkadas_var">Listede Aynı Kişi Bulunmaktadır.</string>
    <string name="iptal">İptal</string>
    <string name="grupbaslik">Grup Adınızı Oluşturun</string>
    <string name="borc_durum">Borç Durum</string>
    <string name="arkadas_sec">Arkadaş Seçiniz</string>

    <string name="gerekli_alan">Bilgileri Eksiksiz Doldurunuz</string>
    <string name="kullanıcı_olustu">Kullanıcı Oluştu</string>
    <string name="telefon_no">TelefonNo</string>
    <string name="email_adres">Email Adresinizi Giriniz</string>
    <string name="dogrulama_kodunuz">Doğrulama Kodunuz</string>
    <string name="dogrula">DOĞRULA</string>
    <string name="sms_text1">Size gönderdiğimiz onay kodunu giriniz</string>
    <string name="sms_text2"><u>Tekrar Gönder</u></string>
    <string name="sms_text3">Doğrulama kodu gelmedi mi?</string>
    <string name="hatali_dogrulama">Hatalı Şifre Girdiniz</string>


    <string name="todo">TODO</string>
    <string name="beni_hatirla">Beni Hatırla</string>
    <string name="sifreni_mi_unuttun">Şifreni mi unuttun?</string>
    <string name="sifremi_unuttum"><u>Şifremi Unuttum</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>