<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical|horizontal"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="240dp"
            android:layout_height="144dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/iv_login" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUser"
            style="@style/textInputLayoutStyle"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_adres">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserName"
                style="@style/r14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="12dp"
                android:inputType="textVisiblePassword"
                tools:targetApi="m" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPass"
            style="@style/textInputLayoutStyle"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/sifreniz"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?thIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                style="@style/r14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="12dp"
                android:inputType="numberPassword"
                tools:targetApi="m" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/rlRemember"
            android:layout_width="260dp"
            android:layout_height="wrap_content">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/cbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:thumbTint="@color/switch_thumb_tint"
                app:trackTint="@color/switch_track_tint" />

            <TextView
                android:id="@+id/tvRemember"
                style="@style/r12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="@dimen/pd_card"
                android:layout_toEndOf="@+id/cbRemember"
                android:text="@string/beni_hatirla" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/btnMedium"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/giris" />


        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pgBar"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnParticipationCode"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:indicatorColor="@color/lightSuccess"
            app:trackCornerRadius="20dp" />


        <TextView
            android:id="@+id/tvForgotPassTitle"
            style="@style/r12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sifreni_mi_unuttun" />

        <TextView
            android:id="@+id/tvRegister"
            style="@style/r12"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/kayit_ol" />

    </LinearLayout>

</ScrollView>
