<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/myCard2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?thDialogBack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/dialogTitleStyle"
            android:text="@string/grupbaslik" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutStyle"
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="@dimen/mr_card_list"
            android:layout_marginEnd="28dp"
            android:hint="@string/grupbaslik">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                style="@style/r14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="@dimen/mrDialogBottom"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/btnMediumOutlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/iptal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOK"
                style="@style/btnMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kaydet"
                app:backgroundTint="?thSuccess" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>