<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?thBack"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_size"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?thBack"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/toolbarImage"
                    style="@style/toolbarImage"
                    android:contentDescription="@string/todo" />

                <TextView
                    style="@style/toolbarTitleText"
                    android:layout_toEndOf="@+id/toolbarImage"
                    android:text="@string/arkadaslarim" />
            </RelativeLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pgBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:indeterminate="true"
        android:visibility="invisible"
        app:indicatorColor="@color/lightSuccess"
        app:trackCornerRadius="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAdd"
        android:layout_below="@+id/pgBar"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            style="@style/myCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                style="@style/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivCardInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_info_sign"
                    app:tint="?thSuccess" />

                <TextView
                    style="@style/r12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/pd_card"
                    android:layout_toEndOf="@+id/ivCardInfo"
                    android:text="@string/arkadaslari_listele"
                    android:textColor="?thSuccess" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/mr8"
            android:layout_marginTop="@dimen/mrTopBottom"
            android:layout_marginEnd="@dimen/mr8"
            />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        style="@style/btnLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/mr"
        android:layout_marginEnd="@dimen/mr"
        android:layout_marginBottom="@dimen/mr"
        android:text="@string/arkadas_ekle"
        app:icon="@drawable/ic_plus" />
</RelativeLayout>
